--- a/app/views/figures/index.erb
+++ b/app/views/figures/index.erb
@@ -1,6 +1,6 @@
 <h4>Figures:</h4>
 <ul>
   <%@figures.each do |figure|%>
-  <li><a href="/figures/<%=figure.slug%>"><%= figure.name %></a></li><br>
+  <li><a href="/figures/<%=figure.id%>"><%= figure.name %></a></li><br>
   <%end%>
 </ul>
