--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -6,25 +6,25 @@
   <label>Choose an existing landmark:</label>
   <br></br>
   <%Landmark.all.each do |landmark|%>
-    <input type="checkbox" name="figure[landmark_ids][]" id="<%=landmark_id%>" value="<%=landmark.id%>"><%=landmark.name%></input>
+    <input type="checkbox" name="figure[landmark_ids][]" id="landmark_<%=landmark.id%>" value="<%=landmark.id%>"><%=landmark.name%></input>
   <%end%>
   <label>or, create a new landmark:</label>
   <br></br>
   <label>name:</label>
-    <input  type="text" name="landmark[name]" id="landmark_name"></input>
+    <input  type="text" name="landmark[name]" id="new_landmark"></input>
 
   <br></br>
     <label>Choose an existing title:</label>
     <br></br>
     <%Title.all.each do |title|%>
-      <input type="checkbox" name="figure[title_ids][]" id="<%=title_name%>" value="<%=title.id%>"><%=title.name%></input>
+      <input type="checkbox" name="figure[title_ids][]" id="title_<%=title.id%>" value="<%=title.id%>"><%=title.name%></input>
     <%end%>
     <label>or, create a new title:</label>
     <br></br>
 
     <label>name:</label>
-      <input  type="text" name="title[name]" id="title_name"></input>
+      <input  type="text" name="title[name]" id="new_title"></input>
 
     <br></br>
-  <input type="submit" value="Create">
+  <input type="submit" value="Create New Figure">
 </form>
