--- a/app/views/figures/edit.erb
+++ b/app/views/figures/edit.erb
@@ -1,18 +1,37 @@
-<h1>Update Your Figure</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Edit Your Figure</title>
+  </head>
+  <body>
 
-<form action="/figures/<%=@figure.slug%>" method="POST">
+<form action="/figures/<%=@figure.id%>" method="POST">
 <input id="hidden" type="hidden" name="_method" value="PATCH">
 
   <label>Name:</label>
-  <input type="text" name="Name" id="name" value="<%=@figure.name%>">
+  <input type="text" name="figure[name]" id="figure_name" value="<%=@figure.name%>"></input>
 
-  <!-- <label>Artist Name:</label>
-  <input  type="text" name="Artist Name" id="artist name" value="<%=@figure.artist.name%>"></input>
-
-  <label>Choose an existing genre:</label>
+  <label>Update Existing Landmarks:</label>
   <br></br>
-  <%Genre.all.each do |genre|%>
-    <input type="checkbox" name="song[genre_ids][]" id="<%=genre.name%>" value="<%=genre.id%>" <%='checked' if (@song_genres.include? genre.id) %>><%=genre.name%></input>
-  <%end%> -->
-
-  <input type="submit" value="Save">
+  <%Landmark.all.each do |landmark|%>
+    <input type="checkbox" name="figure[landmark_ids][]" id="<%=landmark.name%>" value="<%=landmark.id%>" <%='checked' if (@figure.landmark_ids.include? landmark.id) %>><%=landmark.name%></input>
+  <%end%>
+  <br></br>
+  <label>and/or, create a new landmark:</label>
+  <label>Landmark Name:</label>
+    <input  type="text" name="landmark[name]" id="new_landmark"></input>
+  <br></br>
+  <label>Update Titles:</label>
+  <br></br>
+  <%Title.all.each do |title|%>
+    <input type="checkbox" name="figure[title_ids][]" id="<%=title.name%>" value="<%=title.id%>" <%='checked' if (@figure.title_ids.include? title.id) %>><%=title.name%></input>
+  <%end%>
+  <label>and/or, create a new title:</label>
+  <label>Title Name:</label>
+    <input  type="text" name="figure[title_ids][]" id="new_title"></input>
+  <br></br>
+  <input type="submit" value="Edit Figure">
+</form>
+</body>
+</html>
